--- a/BetterCore/BetterCore.csproj
+++ b/BetterCore/BetterCore.csproj
@@ -18,42 +18,19 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Reference Include="$(GameFolder)\Modules\SandBoxCore\bin\Win64_Shipping_Client\*.dll">
-      <HintPath>%(Identity)</HintPath>
-      <Private>False</Private>
-    </Reference>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Compile Remove="bin\**" />
-    <EmbeddedResource Remove="bin\**" />
-    <None Remove="bin\**" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Include="..\LICENSE">
-      <Pack>True</Pack>
-      <PackagePath>\</PackagePath>
-    </None>
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="Bannerlord.ReferenceAssemblies" Version="1.2.8.31530" />
     <PackageReference Include="Bannerlord.ReferenceAssemblies.Core" Version="1.2.8.31530" />
     <PackageReference Include="Bannerlord.ReferenceAssemblies.Native" Version="1.2.8.31530" />
     <PackageReference Include="Bannerlord.ReferenceAssemblies.SandBox" Version="1.2.8.31530" />
     <PackageReference Include="Bannerlord.ReferenceAssemblies.StoryMode" Version="1.2.8.31530" />
-    <PackageReference Include="Harmony.Extensions" Version="3.2.0.77" PrivateAssets="all" IncludeAssets="runtime; build; native; contentfiles; analyzers; buildtransitive" />
     <PackageReference Include="IsExternalInit" Version="1.0.3" PrivateAssets="all" IncludeAssets="runtime; build; native; contentfiles; analyzers; buildtransitive" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Nullable" Version="1.3.1" PrivateAssets="all" IncludeAssets="runtime; build; native; contentfiles; analyzers; buildtransitive" />
-    <PackageReference Include="SonicGD.Lib.Harmony" Version="2.3.1" />
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="README.md">
-      <Pack>True</Pack>
-      <PackagePath>\</PackagePath>
+    <None Update="_Module\SubModule.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
 
