--- a/BetterCore/BetterCore.csproj
+++ b/BetterCore/BetterCore.csproj
@@ -26,6 +26,7 @@
     <PackageReference Include="IsExternalInit" Version="1.0.3" PrivateAssets="all" IncludeAssets="runtime; build; native; contentfiles; analyzers; buildtransitive" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Nullable" Version="1.3.1" PrivateAssets="all" IncludeAssets="runtime; build; native; contentfiles; analyzers; buildtransitive" />
+    <PackageReference Include="SonicGD.Lib.Harmony" Version="2.3.1" />
   </ItemGroup>
 
   <ItemGroup>
