--- a/BetterCore/BetterCore.csproj
+++ b/BetterCore/BetterCore.csproj
@@ -18,15 +18,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Bannerlord.ReferenceAssemblies" Version="1.2.8.31530" />
-    <PackageReference Include="Bannerlord.ReferenceAssemblies.Core" Version="1.2.8.31530" />
-    <PackageReference Include="Bannerlord.ReferenceAssemblies.Native" Version="1.2.8.31530" />
-    <PackageReference Include="Bannerlord.ReferenceAssemblies.SandBox" Version="1.2.8.31530" />
-    <PackageReference Include="Bannerlord.ReferenceAssemblies.StoryMode" Version="1.2.8.31530" />
+    <PackageReference Include="Bannerlord.ReferenceAssemblies" Version="1.2.9.34269" />
     <PackageReference Include="IsExternalInit" Version="1.0.3" PrivateAssets="all" IncludeAssets="runtime; build; native; contentfiles; analyzers; buildtransitive" />
+    <PackageReference Include="Lib.Harmony" Version="2.3.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Nullable" Version="1.3.1" PrivateAssets="all" IncludeAssets="runtime; build; native; contentfiles; analyzers; buildtransitive" />
-    <PackageReference Include="SonicGD.Lib.Harmony" Version="2.3.1" />
   </ItemGroup>
 
   <ItemGroup>
